--- a/style.css
+++ b/style.css
@@ -31,11 +31,8 @@ body {
     padding: 30px;
   }
   
-  .book {
-    padding: 15px;
-    margin: 20px;
-    width: 200px;
-    text-align: center;
+  .book-row {
+    padding-bottom: 20px;
   }
   
   footer {
@@ -43,4 +40,8 @@ body {
     padding: 20px;
     font-size: 1.5rem;
   }
+
+  /* .book-name {
+    color: black;
+  } */
   
